2005-07-26  Mark Wielaard  <mark@klomp.org>

	* javax/swing/plaf/basic/BasicScrollPaneUI.java
	(getPreferredSize): Removed.
	* javax/swing/plaf/basic/BasicTabbedPaneUI.java
	(getPreferredSize): Removed.
	* javax/swing/plaf/basic/BasicToolBarUI.java
	(getPreferredSize): Removed.

2005-07-26  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/AWTUtilities.java:
	Fixed formatting of this file.

2005-07-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalBorders.java:
	(MenuBarBorder): new inner class.

2005-07-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalBorders.java:
	(MenuItemBorder): new inner class.
	
2005-07-26  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/gnu_java_nio_channels_FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_init): Mark clazz as
	unused. Remove unused variables constructor and obj.
	(Java_gnu_java_nio_channels_FileChannelImpl_implCloseChannel): Retry
	when interrupted.
	(Java_gnu_java_nio_channels_FileChannelImpl_available): Likewise.

2005-07-26  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/channels/FileChannelImpl.java (lockCheck): New method.
	(tryLock): Use lockCheck().
	(lock): Likewise.

2005-07-26  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/target/generic/target_generic_network.h
	(TARGET_NATIVE_NETWORK_SOCKET_SET_OPTION_SO_TIMEOUT): Added 
	missing sys/time.h include.

2005-07-26  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/channels/FileChannelImpl.java (description):
	New final field.
	(FileChannelImpl): Set description.
	(init): Likewise.
	(toString): New method.
	All methods add parameters when throwing IllegalArgumentException.
	* native/jni/java-nio/gnu_java_nio_channels_FileChannelImpl.c
	(open): Add filename to FileNotFoundException.

2005-07-26  Jeroen Frijters  <jeroen@frijters.net>

	* NEWS: Added comment about new VMProxy class.
	* gnu/classpath/Configuration.java.in